Final corrections added to all pages of the website

--- a/alphabet.html
+++ b/alphabet.html
@@ -64,7 +64,6 @@
                 </li>
             </ul>
         </div>
-
         <h2 id="intro-alphabet">Introduction to the Hebrew Alphabet</h2>
         <p>
             The Hebrew Alphabet has been used throughout the past two millennia mainly as a script for Biblical
@@ -252,7 +251,7 @@
                 </tr>
                 <tr>
                     <th>Form / Final Form</th>
-                    <td>ך / כ</td>
+                    <td>ך / כּ‎</td>
                 </tr>
                 <tr>
                     <th>Pronunciation</th>
@@ -280,7 +279,7 @@
                 </tr>
                 <tr>
                     <th>Pronunciation</th>
-                    <th>[m]</th>
+                    <td>[m]</td>
                 </tr>
                 <tr>
                     <th>Letter Name</th>
@@ -300,7 +299,7 @@
                 </tr>
                 <tr>
                     <th>Form</th>
-                    <td>ס</td>
+                    <td>ס‎</td>
                 </tr>
                 <tr>
                     <th>Pronunciation</th>
@@ -340,7 +339,7 @@
                 </tr>
                 <tr>
                     <th>Pronunciation</th>
-                    <th>[ts]</th>
+                    <th>[tz]</th>
                 </tr>
                 <tr>
                     <th>Letter Name</th>
@@ -407,7 +406,7 @@
         <!-- Vowels and Dots -->
         <h2 id="vowels-dots">Vowels and Dots</h2>
         <p>
-            Hebrew language has a system of dots and diacritics that helps readers determine where vowels
+            The Hebrew language has a system of dots and diacritics that helps readers determine where vowels
             are and how to pronounce words - this is called <i>Niqqud</i>. This was developed historically by the
             Masoretes
             (Jewish scribes and scholars) between the 5th and the 10th centuries.
@@ -416,8 +415,8 @@
             This was initially meant to standardize
             pronunciation, paragraph, verse division and cantillation or chanting of the Hebrew Bible (the
             Tanakh).
-            In writing, these are only used to teach children or beginners Hebrew, in religious texts such
-            as prayer books or the Hebrew Bible and in borrowed words.
+            In writing, these are only used to teach children or beginners Hebrew, in prayer books or the Hebrew Bible,
+            and in borrowed words.
         </p>
         <h3><i>Mater Lectionis</i> (from Latin "mothers of reading")</h3>
         <p>
@@ -455,7 +454,7 @@
             learn them.
         </p>
         <p>
-            Don't be discouraged if you don't get it right initially, there are many letters in Hebrew that can be
+            Don't be discouraged if you don't get it right initially, there are many Hebrew letters that can be
             difficult for non-native speakers to pronounce, the goal for now is to enjoy the learning process!
         </p>
         <p>
@@ -465,13 +464,15 @@
         </p>
         <ul>
             <li>
-                <a href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts" target="_blank">Hebrew
-                    alphabet practice -
-                    YouTube video</a>.
+                <a href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts" target="_blank"
+                    rel="noopener" aria-label="Click to go to the YouTube video (opens in a new tab)">Hebrew
+                    alphabet practice - YouTube video</a>.
             </li>
             <li>
                 <a href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
-                    target="_blank">Vowel practice - YouTube video</a>.
+                    target="_blank" rel="noopener"
+                    aria-label="Click to go to the YouTube video (opens in a new tab)">Vowel practice - YouTube
+                    video</a>.
 
             </li>
         </ul>
@@ -493,7 +494,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-        <p class="copyright"> © 2021 Cristina Onea</p>
+        <p class="copyright"> © 2021 Hebrew Language </p>
     </footer>
 </body>
 
