--- a/index.html
+++ b/index.html
@@ -37,147 +37,157 @@
     </header>
 
     <!-- Home image -->
-    <section>
-        <h1>The Hebrew Language</h1>
-        <div id="div-home-image">
-            <img id="home-image" src="assets/images/dead-sea-scrolls-facsimile-edition-02.jpg"
-                alt="An image of a dead sea manuscript in Hebrew language">
-        </div>
-    </section>
+    <h1>The Hebrew Language</h1>
+    <div id="div-home-image">
+        <img id="home-image" src="assets/images/dead-sea-scrolls-facsimile-edition-02.jpg"
+            alt="An image of a dead sea manuscript in Hebrew language">
+    </div>
 
     <!--Page menu-->
-    <section>
-        <div class="main-container">
-            <h2>Main points</h2>
-            <div id="main-points">
-                <ul>
-                    <li>
-                        <a href="#introduction">Introduction to the Hebrew Language</a>
-                    </li>
-                    <li>
-                        <a href="#Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
-                    </li>
-                    <li>
-                        <a href="#revival">Revival of the Hebrew Language</a>
-                    </li>
-                    <li>
-                        <a href="#modern-day">Modern-day Hebrew</a>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- Introduction -->
-            <h2 id="introduction">Introduction to the Hebrew Language</h2>
-            <p>
-                Hebrew (עברית) is a Northwest Semitic language (or Northern Central), that belongs to the
-                Afroasiatic language family. Historically, it is regarded as the language of the Israelites, Judeans
-                and their ancestors. It is the only Canaanite language still spoken and the only truly successful
-                example of a revived dead language, and one of only two Northwest Semitic languages still spoken,
-                the other being Aramaic.
-            </p>
-            <p>
-                Hebrew ceased to be an everyday spoken language sometime between 200 and 400 CE, declining in the
-                aftermath of the Bar Kokhba revolt. Aramaic and, to a lesser extent, Greek were already in use as
-                international languages, especially among elites, immigrants and generally the Jewish diaspora. Hebrew
-                survived into the medieval
-                period as the language of Jewish liturgy, rabbinic literature, intra-Jewish commerce, and poetry.
-            </p>
-            <p>
-                With the rise of Zionism in the 19th century, it was revived as a spoken and literary language,
-                becoming the main language of the Yishuv and subsequently of the State of Israel. Yishuv was the name
-                given to the body of Jewish residents prior to the establishment of the State of Israel in 1948.
-                In 2013, Modern Hebrew was spoken by over nine million people worldwide. After Israel, the United
-                States has the second largest Hebrew-speaking population, with about 220,000 fluent speakers, mostly
-                from Israel.
-            </p>
-            <p>
-                Modern Hebrew is the official language of the State of Israel, while premodern or Biblical Hebrew
-                (in Hebrew <i>Ivrit Tanakhit</i>) is used for prayer or study in Jewish communities around the world
-                today.
-                The Samaritan dialect is also the liturgical tongue of the Samaritans, while modern Hebrew or Arabic
-                is their vernacular.
-            </p>
-            <p>
-                As a foreign language, Hebrew is one of the most studied languages in the world,
-                mostly by Jews and people with Jewish ancestry,
-                students who study Judaism and Israel, by archaeologists (specifically the ones who research the
-                Biblical period) and linguists
-                specializing in the languages of Middle East and its civilizations,
-                by theologians and students in Christian seminaries.
-                Nearly all of the Hebrew Bible (in Judaism the <i>Tanakh</i>) is written in Biblical Hebrew, with much
-                of
-                its present form in the dialect that scholars believe flourished around the 6th century BCE, around
-                the time of the Babylonian captivity.
-            </p>
-
-            <!-- Main content-->
-            <h2 id="Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
-            <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
-                for religious activities and for liturgy. According to Genesis, God created the world using words, which
-                meant that the Hebrew language is holy.
-                This led to a mystification of the language in Judaism, which meant
-                that this is not just an ordinary language, it is the language of God and it should be used properly.
-            </p>
-            <p>
-                Many Jewish movements focused on studying the Hebrew language, for example Kabbalah, the esoteric Jewish
-                mysticism, talks about a secret language code hidden in the Hebrew Bible and the language also has
-                supernatural powers.
-                For more than two thousand years, in Judaism, Hebrew language has been referred to as <i>Lashon
-                    HaKodesh</i> (לשון הקודש),
-                "the holy language" or "the language of holiness”.
-                Out of respect for the holy language, many ultra-orthodox currently only use it for prayer and liturgy,
-                while using Yiddish, Ladino and other languages and dialects for day to day communication.
-            </p>
-            <h2 id="revival">Revival of the Hebrew Language</h2>
-            <p>
-                Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most
-                successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement,
-                also
-                known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire.
-            </p>
-            <p>
-                He helped establish schools where Hebrew was taught and he developped tools that made the literary and
-                liturgical Hebrew into a
-                spoken language. This whole process also included borrowing words from several European languages for
-                words
-                that did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew
-                monthly <i> Ha-Shiloaḥ</i>, Hebrew language literary journal at the beginning of twentieth century which
-                is
-                published in Warsaw.
-            </p>
-            <p>
-                After the fall of the Ottoman empire, the British Mandate of Palestine started in 1920, this recognized
-                Hebrew as one
-                of the three official languages, together with English and Arabic. This event coincided with a huge wave
-                of
-                immigrants
-                coming to the country, mainly because of first world war.
-            </p>
-            <p>
-                Since everyone was speaking a different language, there
-                was a great need for people to communicate, this led to the establishment of the Academy of the Hebrew
-                Language.
-                Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be
-                holy and it was blasphemous to use it for ordinary communication.
-            </p>
-            <h2 id="modern-day">Modern-day Hebrew</h2>
-            <p>
-                According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew" target="_blank"
-                    rel="noopener" aria-label="This is a Wikipedia link (opens in a new tabF">Wikipedia</a> around 53%
-                of the Israeli population speaks Hebrew as a native
-                language,
-                while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
-                Russian, Arabic, French, English, Yiddish, and Ladino.
-            </p>
-            <p>
-                There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the
-                Hebrew Language
-                invents around 2000 new Hebrew words each year as a way of promoting the language and
-                encouraging people to use Hebrew more and less words from international languages
-                such as English.
-            </p>
+    <div class="main-container">
+        <h2>Main points</h2>
+        <div id="main-points">
+            <ul>
+                <li>
+                    <a href="#introduction">Introduction to the Hebrew Language</a>
+                </li>
+                <li>
+                    <a href="#Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
+                </li>
+                <li>
+                    <a href="#revival">Revival of the Hebrew Language</a>
+                </li>
+                <li>
+                    <a href="#modern-day">Modern-day Hebrew</a>
+                </li>
+            </ul>
         </div>
-    </section>
+
+
+        <!-- Introduction -->
+        <h2 id="introduction">Introduction to the Hebrew Language</h2>
+        <p>
+            Hebrew (עברית) is a Northwest Semitic language (or Northern Central), that belongs to the
+            Afroasiatic language family. Historically, it is regarded as the language of the Israelites, Judeans
+            and their ancestors. It is the only Canaanite language still spoken and a great
+            example of a revived dead language, and one of only two Northwest Semitic languages still spoken,
+            the other being Aramaic.
+        </p>
+        <p>
+            Hebrew ceased to be an everyday spoken language sometime between 200 and 400 CE, declining in the
+            aftermath of the Bar Kokhba revolt. Around that time, Aramaic and, to a lesser extent, Greek were
+            already in use as
+            international languages, especially among elites, immigrants and generally the Jewish diaspora. Hebrew
+            survived into the medieval
+            period as the language of Jewish liturgy, rabbinic literature, intra-Jewish commerce, and poetry.
+        </p>
+        <p>
+            With the rise of Zionism in the 19th century, it was revived as a spoken and literary language,
+            becoming the main language of the Yishuv and subsequently of the State of Israel. Yishuv was the name
+            given to the body of Jewish residents prior to the establishment of the State of Israel in 1948.
+        </p>
+        <p>
+            Modern Hebrew is the official language of the State of Israel, while premodern or Biblical Hebrew
+            (in Hebrew <i>Ivrit Tanakhit</i>) is used for prayer or study in Jewish communities around the world
+            today.
+            The Samaritan dialect is also the liturgical tongue of the Samaritans, while modern Hebrew or Arabic
+            is their vernacular.
+        </p>
+        <p>
+            As a foreign language, Hebrew is one of the most studied languages in the world,
+            mostly by Jews and people with Jewish ancestry,
+            students who study Judaism and Israel, by archaeologists (specifically the ones who research the
+            Biblical period) and linguists
+            specializing in the languages of the Middle East and its civilizations,
+            by theologians and students in Christian seminaries.
+            Nearly all of the Hebrew Bible (in Judaism the <i>Tanakh</i>) is written in Biblical Hebrew, with
+            much
+            of
+            its present form in the dialect that scholars believe flourished around the 6th century BCE, around
+            the time of the Babylonian captivity.
+        </p>
+
+        <!-- Main content-->
+        <h2 id="Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
+        <p> Hebrew stopped being used as a day-to-day language over two millennia ago, and it was only mainly
+            used
+            for religious activities and for liturgy. According to Genesis, God created the world using words,
+            therefore the Hebrew language is holy.
+            This led to a mystification of the language in Judaism, which meant
+            that this is not just an ordinary language, it is the language of God and it should be used
+            properly.
+        </p>
+        <p>
+            Many Jewish movements focused on studying the Hebrew language, for example, Kabbalah, the esoteric
+            Jewish
+            mysticism, talks about a secret language code hidden in the Hebrew Bible and the language also has
+            supernatural powers.
+            For more than two thousand years, in Judaism, the Hebrew language has been referred to as <i>Lashon
+                HaKodesh</i> (לשון הקודש),
+            "the holy language" or "the language of holiness”.
+            Out of respect for the holy language, many ultra-orthodox currently only use it for prayer and
+            liturgy,
+            while using Yiddish, Ladino and other languages and dialects for day to day communication.
+        </p>
+        <h2 id="revival">Revival of the Hebrew Language</h2>
+        <p>
+            Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most
+            successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement,
+            also
+            known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire.
+        </p>
+        <p>
+            He helped establish schools where Hebrew was taught and he developed tools that made the literary
+            and
+            liturgical Hebrew into a
+            spoken language. This whole process also included borrowing words from several European languages
+            for
+            words
+            that did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the
+            Hebrew
+            monthly <i> Ha-Shiloaḥ</i>, a Hebrew language literary journal at the beginning of twentieth century
+            which
+            is
+            published in Warsaw.
+        </p>
+        <p>
+            After the fall of the Ottoman Empire, the British Mandate of Palestine started in 1920, this
+            recognized
+            Hebrew as one
+            of the three official languages, together with English and Arabic. This event coincided with a huge
+            wave
+            of
+            immigrants
+            coming to the country, mainly because of first world war.
+        </p>
+        <p>
+            Since everyone was speaking a different language, there
+            was a great need for people to communicate, this led to the establishment of the Academy of the
+            Hebrew
+            Language.
+            Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be
+            holy and it was blasphemous to use it for ordinary communication.
+        </p>
+        <h2 id="modern-day">Modern-day Hebrew</h2>
+        <p>
+            According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew" target="_blank"
+                rel="noopener" aria-label="This is a Wikipedia link (opens in a new tab)">Wikipedia</a>, around
+            53% of the Israeli population speaks Hebrew as a native language,
+            while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
+            Russian, Arabic, French, English, Yiddish, and Ladino. In 2013, Modern Hebrew was spoken by over
+            nine million people worldwide. After Israel, the United
+            States has the second largest Hebrew-speaking population, with about 220,000 fluent speakers, mostly
+            from Israel.
+        </p>
+
+        <p>
+            There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the
+            Hebrew Language
+            invents around 2000 new Hebrew words each year as a way of promoting the language and
+            encouraging people to use Hebrew more and fewer words from international languages
+            such as English.
+        </p>
+    </div>
 
     <!-- Footer -->
     <footer class="main-footer">
@@ -195,7 +205,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-        <p class="copyright"> © 2021 Cristina Onea</p>
+        <p class="copyright"> © 2021 Hebrew Language</p>
     </footer>
 </body>
 
