--- a/words.html
+++ b/words.html
@@ -13,6 +13,8 @@
     <title>Hebrew Language</title>
 </head>
 
+<!-- Navigation bar -->
+
 <body>
     <header>
         <nav id="menu">
@@ -31,117 +33,120 @@
             </nav>
         </nav>
     </header>
-    <section>
-        <h1>Common Hebrew Phrases</h1>
-        <div id="container-words-page">
-            <div id="words-introduction">
-                <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg" alt="Hebrew words in red colour">
-            </div>
-            <h2>Hebrew Root Words</h2>
-            <p>
-                One of the most important things to know about the Hebrew language is that most words derive from a
-                three-consonant root word that contains the intrinsic meaning of the word. This root word is called
-                'shoresh' and by adding letters at the beginning and end of the root, you get all kinds of parts of
-                speech
-                like nouns, verbs and adjectives.
-            </p>
-            <h2><i>Shalom</i> (שלום)</h2>
-            <p>
-                Shalom is perhaps the most well-known Hebrew word. It means hello, goodbye, and peace.
-                It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon
-                you') which is also a traditional song sung by Jews every Friday night upon returning home
-                from synagogue prayer on the eve of the Shabbat.
-            </p>
-            <h2><i>Ken</i> (כן) and <i>Lo</i> (לֹא)</h2>
-            <p>
-                <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which
-                literally
-                means Yes and No (<i>ve</i> means 'and').
-            </p>
-            <h2 class="clear"><i>Slicha</i> (סליחה)</h2>
-            <p> <i>Slicha</i> means sorry or excuse me.</p>
-            <h2> <i>Toda</i> (תודה)</h2>
-            <p>
-                <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i> meaning thank you very
-                much.
-            </p>
-            <h2> <i>BeVakasha</i> (בבקשה)</h2>
-            <p>
-                In Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
-                When someone says
-                <i>Toda</i> 'Thank you', you can reply with <i>BeVakasha</i>. Similarly, you can ask something from
-                someone
-                using <i>BeVakasha</i> in the sentence.
-            </p>
-            <div class="clearfix">
-                <img id="second-image" src="assets/images/hebrew-letters-unsplash.jpg"
-                    alt="Hebrew letters in a manuscript">
-                <h2> <i>Mayim</i> (מים)</h2>
-                <p>
-                    <i>Mayim</i> means 'water' – the interesting fact about Mayim is that’s it’s a dual noun. Dual nouns
-                    in Hebrew usually have no singular form.
-                </p>
-                <h2><i>Shamayim</i> (שמיים)</h2>
-                <p>
-                    A similar dual noun is <i>Shamayim</i> which means 'heavens' or 'skies'.
-                </p>
-                <h2><i>Mazel Tov</i> (מזל טוב)</h2>
-                <p>
-                    <i>Mazel Tov</i> literally means 'good luck' and 'congratulations'. It's something people say to
-                    someone getting married.
-                </p>
-                <h2><i>Ma Shlomcha?</i> (מה שלומך)</h2>
-                <p>
-                    This is a way of asking someone 'How are you?', it literally means 'what (is) your peace?'. You
-                    probably
-                    notice the word <i>Shalom</i> in <i>Shlomcha</i> because there are from the same Hebrew root
-                    <i>Shalem</i> (שלם) that means 'whole' and 'complete'. Similarly, <i>Ma Nishma</i> (מה נשמע)
-                    means 'What's up?'.
-                </p>
-                <h2><i>Baruch HaShem</i> (ברוך השם)</h2>
-                <p>
-                    It literally means 'Blessed be the name' where name refers to God, in Judaism you're not supposed
-                    to
-                    pronounce God's name as his name is holy as God is holy. It's very versatile and can mean different
-                    things
-                    depending on the context, for example it's used to say, 'I can't complain' or 'It is what it is' to
-                    say you
-                    accept a certain situation.
-                </p>
-                <h2><i>Kol HaKavod</i> (כל הכבוד)</h2>
-                <p>
-                    'Good job' or 'well done' (lit: all the respect).
-                </p>
-                <h2><i>Beseder</i> (בסדר)</h2>
-                <p>
-                    <i>Beseder</i> is used in many phrases to express that something or someone is OK. For example,
-                    <i>HaKol Beseder</i>
-                    (הכול בסדר) means 'everything is OK', whereas <i>Yihye BeSeder</i> (יהיה בסדר) means
-                    'It will be OK' or 'no worries'.
-                </p>
-                <h2><i>Chaval al Ha’Zman</i> (חבל על הזמן)</h2>
-                <p>
-                    It literally means 'a waste of time' but it can have various meanings, colloquially, it means
-                    'forget it' and in slang it can also be used as an expletive 'great' or 'wonderful'.
-                </p>
-                <h2><i>Nu</i> (נו)</h2>
-                <p><i>Nu</i> is a two-letter word that comes from Yiddish and is used colloquially to say'So?', 'c’mon
-                    already', 'go
-                    on'. </p>
-                <h2><i>Chutzpah</i> (חוצפה)</h2>
-                <p>
-                    This slang word comes from Yiddish, and it means 'nerve', 'audacity'.
-                </p>
-                <h2><i>Sababa</i> סבבה</h2>
-                <p>This word comes from Arabic and it's a slang way of saying 'cool' or 'awesome'</p>
-                <h2><i>Yalla</i> יאללה</h2>
-                <p>
-                    This slang word comes from Arabic as well and it means 'let's go', 'go ahead'.
-                </p>
-            </div>
-        </div>
-    </section>
 
+    <!-- Hebrew Root Words -->
+
+    <h1>Common Hebrew Phrases</h1>
+    <div id="container-words-page">
+        <div id="words-introduction">
+            <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg" alt="Hebrew words in red colour">
+        </div>
+        <h2>Hebrew Root Words</h2>
+        <p>
+            One of the most important things to know about the Hebrew language is that most words derive from a
+            three-consonant root word that contains the intrinsic meaning of the word. This root word is called
+            'shoresh' and by adding letters at the beginning and end of the root, you get all kinds of parts of
+            speech
+            like nouns, verbs and, adjectives.
+        </p>
+        
+        <!-- Hebrew Common Phrases -->
+        <h2><i>Shalom</i> (שלום)</h2>
+        <p>
+            Shalom is perhaps the most well-known Hebrew word. It means hello, goodbye, and peace.
+            It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon
+            you') which is also a traditional song sung by Jews every Friday night upon returning home
+            from synagogue prayer on the eve of the Shabbat.
+        </p>
+        <h2><i>Ken</i> (כן) and <i>Lo</i> (לֹא)</h2>
+        <p>
+            <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which
+            literally
+            means Yes and No (<i>ve</i> means 'and').
+        </p>
+        <h2 class="clear"><i>Slicha</i> (סליחה)</h2>
+        <p> <i>Slicha</i> means sorry or excuse me.</p>
+        <h2> <i>Toda</i> (תודה)</h2>
+        <p>
+            <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i> meaning thank you very
+            much.
+        </p>
+        <h2> <i>BeVakasha</i> (בבקשה)</h2>
+        <p>
+            In Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
+            When someone says
+            <i>Toda</i> 'Thank you', you can reply with <i>BeVakasha</i>. Similarly, you can ask something from
+            someone
+            using <i>BeVakasha</i> in the sentence.
+        </p>
+        <div class="clearfix">
+            <img id="second-image" src="assets/images/hebrew-letters-unsplash.jpg" alt="Hebrew letters in a manuscript">
+            <h2> <i>Mayim</i> (מים)</h2>
+            <p>
+                <i>Mayim</i> means 'water' – the interesting fact about Mayim is that’s it’s a dual noun. Dual nouns
+                in Hebrew usually have no singular form.
+            </p>
+            <h2><i>Shamayim</i> (שמיים)</h2>
+            <p>
+                A similar dual noun is <i>Shamayim</i> which means 'heavens' or 'skies'.
+            </p>
+            <h2><i>Mazel Tov</i> (מזל טוב)</h2>
+            <p>
+                <i>Mazel Tov</i> literally means 'good luck' and 'congratulations'. It's something people say to
+                someone getting married.
+            </p>
+            <h2><i>Ma Shlomcha?</i> (מה שלומך)</h2>
+            <p>
+                This is a way of asking someone 'How are you?', it literally means 'what (is) your peace?'. You
+                probably
+                notice the word <i>Shalom</i> in <i>Shlomcha</i> because there are from the same Hebrew root
+                <i>Shalem</i> (שלם) that means 'whole' and 'complete'. Similarly, <i>Ma Nishma</i> (מה נשמע)
+                means 'What's up?'.
+            </p>
+            <h2><i>Baruch HaShem</i> (ברוך השם)</h2>
+            <p>
+                It literally means 'Blessed be the name' where name refers to God, in Judaism you're not supposed
+                to
+                pronounce God's name as his name is holy as God is holy. It's very versatile and can mean different
+                things
+                depending on the context, for example it's used to say, 'I can't complain' or 'It is what it is' to
+                say you
+                accept a certain situation.
+            </p>
+            <h2><i>Kol HaKavod</i> (כל הכבוד)</h2>
+            <p>
+                'Good job' or 'well done' (lit: all the respect).
+            </p>
+            <h2><i>Beseder</i> (בסדר)</h2>
+            <p>
+                <i>Beseder</i> is used in many phrases to express that something or someone is OK. For example,
+                <i>HaKol Beseder</i>
+                (הכול בסדר) means 'everything is OK', whereas <i>Yihye BeSeder</i> (יהיה בסדר) means
+                'It will be OK' or 'no worries'.
+            </p>
+            <h2><i>Chaval al Ha’Zman</i> (חבל על הזמן)</h2>
+            <p>
+                It literally means 'a waste of time' but it can have various meanings, colloquially, it means
+                'forget it' and in slang it can also be used as an expletive 'great' or 'wonderful'.
+            </p>
+            <h2><i>Nu</i> (נו)</h2>
+            <p><i>Nu</i> is a two-letter word that comes from Yiddish and is used colloquially to say'So?', 'c’mon
+                already', 'go
+                on'. </p>
+            <h2><i>Chutzpah</i> (חוצפה)</h2>
+            <p>
+                This slang word comes from Yiddish, and it means 'nerve', 'audacity'.
+            </p>
+            <h2><i>Sababa</i> סבבה</h2>
+            <p>This word comes from Arabic and it's a slang way of saying 'cool' or 'awesome'</p>
+            <h2><i>Yalla</i> יאללה</h2>
+            <p>
+                This slang word comes from Arabic as well and it means 'let's go', 'go ahead'.
+            </p>
+        </div>
+    </div>
+
+    <!-- Footer -->
     <footer class="main-footer">
         <ul>
             <li>
@@ -157,7 +162,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-        <p class="copyright"> © 2021 Cristina Onea</p>
+        <p class="copyright"> © 2021 Hebrew Language</p>
     </footer>
 </body>
 
