Add more info and screenshots to readme file

--- a/alphabet.html
+++ b/alphabet.html
@@ -494,7 +494,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-        <p class="copyright"> © 2021 Hebrew Language </p>
+        <p class="copyright"> © 2021 The Hebrew Language </p>
     </footer>
 </body>
 
