--- a/words.html
+++ b/words.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
-    <link rel="stylesheet" href="assets/css/normalize.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Hebrew Language</title>
 </head>
 
 <!-- Navigation bar -->
-
 <body>
     <header>
         <nav id="menu">
@@ -35,7 +33,6 @@
     </header>
 
     <!-- Hebrew Root Words -->
-
     <h1>Common Hebrew Phrases</h1>
     <div id="container-words-page">
         <div id="words-introduction">
@@ -137,9 +134,9 @@
             <p>
                 This slang word comes from Yiddish, and it means 'nerve', 'audacity'.
             </p>
-            <h2><i>Sababa</i> סבבה</h2>
+            <h2><i>Sababa</i> (סבבה)</h2>
             <p>This word comes from Arabic and it's a slang way of saying 'cool' or 'awesome'</p>
-            <h2><i>Yalla</i> יאללה</h2>
+            <h2><i>Yalla</i> (יאללה)</h2>
             <p>
                 This slang word comes from Arabic as well and it means 'let's go', 'go ahead'.
             </p>
@@ -162,7 +159,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-        <p class="copyright"> © 2021 Hebrew Language</p>
+        <p class="copyright"> © 2021 The Hebrew Language</p>
     </footer>
 </body>
 
