--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <!-- Header background image-->
-
 <body>
     <div id="header-image">
     </div>
@@ -205,7 +204,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-        <p class="copyright"> © 2021 Hebrew Language</p>
+        <p class="copyright"> © 2021 The Hebrew Language</p>
     </footer>
 </body>
 
