Remove id logo from alphabet page. Add hebrew vowel picture.

--- a/alphabet.html
+++ b/alphabet.html
@@ -34,7 +34,7 @@
     </header>
 
     <!--Introduction and page menu-->
-    <h1 id="logo">The Hebrew Alphabet</h1>
+    <h1 id>The Hebrew Alphabet</h1>
     <div class="main-container">
         <div id="alphabet-introduction">
             <img id="alphabet-picture" src="assets/images/bereshit_1.jpg"
@@ -426,7 +426,7 @@
         </p>
         <div>
             <p>
-                <img id="vowels" src="assets/images/hebrew_vowels.gif"
+                <img id="vowels" src="assets/images/hebrew-vowels.gif"
                     alt="this is an image showing all Hebrew vowels and their pronunciation">
             </p>
 
