Make final corrections to the text and code on the words page

--- a/words.html
+++ b/words.html
@@ -13,6 +13,7 @@
 </head>
 
 <!-- Navigation bar -->
+
 <body>
     <header>
         <nav id="menu">
@@ -40,13 +41,18 @@
         </div>
         <h2>Hebrew Root Words</h2>
         <p>
-            One of the most important things to know about the Hebrew language is that most words derive from a
+            In Semitic languages, and Hebrew is no exception, most words derive from a
             three-consonant root word that contains the intrinsic meaning of the word. This root word is called
-            'shoresh' and by adding letters at the beginning and end of the root, you get all kinds of parts of
-            speech
-            like nouns, verbs and, adjectives.
+            <i>shoresh</i> and by adding letters at the beginning and end of the root, you get various parts of
+            speech like nouns, verbs and adjectives. You will see further on that it is normal for Hebrew words have
+            more than one meaning. This is also because modern Hebrew gave old words new meanings to make
+            up for the lack of modern words.
         </p>
-        
+        <p>
+            We hope that you enjoy the below selection of Hebrew words and that you learn something new about this beautiful
+            language!
+        </p>
+
         <!-- Hebrew Common Phrases -->
         <h2><i>Shalom</i> (שלום)</h2>
         <p>
